<resources>
    <string name="app_name">物2斗</string>
    <string name="ok">确认</string>
    <string name="exit">退出</string>
    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="dismiss">解散</string>
    <string name="manager">管理</string>
    <string name="success">操作成功</string>
    <string name="failuer">操作失败</string>
    <string name="delete">删除</string>
    <string name="search_fauiler">查询失败！</string>
    <string name="system_erro">系统异常！</string>

    <!--引导页-->
    <string name="guidepage_title1">洗牌发牌文案</string>
    <string name="guidepage_title2">私人房间</string>
    <string name="guidepage_title3">一键开局</string>
    <string name="guidepage_detail1">经典潮汕游戏，创新模式，搭配最公正算法</string>
    <string name="guidepage_detail2">俱乐部，私人房间，语音交流，给你不一样的体验</string>
    <string name="guidepage_detail3">随时随地开启游戏乐趣</string>

    <!--登录 注册-->
    <string name="login_erro">手机号或密码错误，请重新登录。</string>
    <string name="login_system_erro">系统异常，重新登录。</string>
    <string name="login_token_invalid">自动登录失效，请重新登录！</string>
    <string name="login_forced_exit">你的账号已经在另一台设备登录，请重新登录！</string>
    <string name="title_register">注册账号</string>
    <string name="title_reset">重置密码</string>
    <string name="title_perfect_info">完善资料</string>
    <string name="input_phonenum">请输入手机号码</string>
    <string name="input_sms">请输入短信验证码</string>
    <string name="input_psw">请输入密码</string>
    <string name="input_inviteCode">请输入邀请码</string>
    <string name="getsms_failuer">获取验证码失败，请重新获取验证码</string>
    <string name="phone_is_register">该手机号已注册，请直接登录！</string>
    <string name="sms_invalid">短信发送失败，请重新获取验证码</string>
    <string name="sms_success">短信验证码已发送</string>
    <string name="register_success">注册成功</string>
    <string name="register_failuer">注册失败，请重试</string>
    <string name="sms_failuer">验证码错误</string>
    <string name="phone_isnot_register">该手机号未注册，请先注册！</string>
    <string name="reset_failuer">重置失败</string>
    <string name="reset_success">重置密码成功，请重新登录</string>
    <string name="login_welcom">欢迎回来</string>
    <string name="phone_num">手机号</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="register_sms_code">手机验证码</string>
    <string name="register_text">注册</string>
    <string name="login_text">登录</string>
    <string name="reset_psw">确认修改</string>
    <string name="user_name">昵称</string>
    <string name="user_sex">性别</string>
    <string name="select_system_image">从系统相册选择</string>
    <string name="take_photo">拍照</string>
    <string name="upload_image">上传图片</string>

    <!--编辑用户信息-->
    <string name="perfect_info_repeat">昵称重复</string>
    <string name="perfect_info_nouser">暂无该用户</string>
    <string name="perfect_info_nodiomand">钻石不足</string>
    <string name="perfect_info_faiure">更新失败</string>
    <string name="perfect_info_illegal">包含非法字符</string>
    <string name="perfect_info_nick">请填写昵称！</string>
    <string name="perfect_info_sex">请选择性别！</string>

    <!--底部tab名称-->
    <string name="tab1">牌局</string>
    <string name="tab2">俱乐部</string>
    <string name="tab3">战绩</string>
    <string name="tab4">我的</string>
    <string name="tab_main">首页</string>

    <!--俱乐部-->
    <string name="titlle_club_message">俱乐部消息</string>
    <string name="club_empty_text1">你还没有加入俱乐部哦~</string>
    <string name="club_empty_text2">自己创建或者加入一个吧！</string>
    <string name="my_club">我的俱乐部</string>
    <string name="join_club">加入的俱乐部</string>
    <string name="create_to_club">创建俱乐部</string>
    <string name="create_to_club_success">俱乐部创建成功！</string>
    <string name="create_to_club_failuer">俱乐部创建失败！</string>
    <string name="join_to_club">加入俱乐部</string>
    <string name="club_creat_name">俱乐部名称</string>
    <string name="club_create_input_name">请输入名称</string>
    <string name="club_create_region">俱乐部地区</string>
    <string name="club_create_input_region">请输入地区</string>
    <string name="club_create_intro">俱乐部简介</string>
    <string name="club_create_input_intro">请输入简介</string>
    <string name="club_create_fee">花费：</string>
    <string name="club_create_balance">余额：</string>
    <string name="club_sure_create">确定创建</string>
    <string name="club_info_input">请输入</string>
    <string name="club_edit_name">编辑俱乐部名称</string>
    <string name="club_edit_intro">编辑俱乐部简介</string>
    <string name="club_edit_region">输入地区名称</string>
    <string name="club_edit_save">保存</string>
    <string name="all_search_club">搜索到的俱乐部</string>
    <string name="register_as_new">注册新用户</string>
    <string name="apply_for_join">申请加入</string>
    <string name="input_verification_info">输入验证消息</string>
    <string name="search_club">搜索俱乐部</string>
    <string name="apply_club_succsee">申请成功！</string>
    <string name="apply_club_failuer">申请失败！</string>
    <string name="data_exception">数据库异常！</string>
    <string name="club_contain">玩家已在该俱乐部！</string>
    <string name="club_disband">俱乐部已解散！</string>
    <string name="club_member">俱乐部成员</string>
    <string name="into_not_disturb">消息免打扰</string>
    <string name="club_creater">创建者</string>
    <string name="club_detail">俱乐部详情</string>
    <string name="club_update_Success">俱乐部信息更新成功！</string>
    <string name="club_update_failuer">俱乐部信息更新失败！</string>
    <string name="club_repeat">已有相同俱乐部!</string>
    <string name="club_not_exitence">"俱乐部不存在!</string>
    <string name="title_person_detail">个人详情</string>
    <string name="sure_exit_club">确定要退出俱乐部？</string>
    <string name="exit_club">退出俱乐部</string>
    <string name="sure_dismiss_club">确定要解散俱乐部？</string>
    <string name="dismiss_club">解散俱乐部</string>
    <string name="refuse">拒绝</string>
    <string name="agree">同意</string>
    <string name="club_game_list">游戏列表</string>
    <string name="game_filter">筛选</string>
    <string name="invitation_code">邀请码：</string>
    <string name="invitation_code2">邀请码</string>
    <string name="club_game_palying">游戏中</string>
    <string name="club_game_waiting">等待中</string>
    <string name="not_game">没有游戏</string>
    <string name="type">类型</string>
    <string name="model">模式</string>
    <string name="base_score">底分</string>
    <string name="banker_count">庄位</string>
    <string name="people_count">人数</string>
    <string name="seat">座位</string>
    <string name="main_invitation_code_prompt">输入验证码,和朋友一起切磋</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failuer">删除失败</string>
    <string name="update_max_people">升级上限人数</string>
    <string name="update_max_success">升级上限人数成功</string>
    <string name="update_max_failuer">只有创建者可以升级战队人数上限</string>
    <string name="update_max_request_erro">请求参数错误(钻石和升级人数不对应)</string>
    <string name="update_max_not_idou">钻石不足！</string>
    <string name="update_max_too_much">战队人数上限已经达到了最大值1000</string>
    <string name="no_allow_game">没有符合条件的牌局</string>

    <!--牌局-->
    <string name="begin_game">现在开局</string>
    <string name="bring_score">带入积分</string>
    <string name="room_name">房间名称</string>
    <string name="less_8_words">少于8字符</string>
    <string name="str_fees">手续费:</string>
    <string name="room_rate">房费:</string>
    <string name="game_duration">牌局时长</string>
    <string name="people_num_settinf">人数设置</string>
    <string name="advanced_setting">高级设置</string>
    <string name="authorize_input">授权带入</string>
    <string name="authorize_input_info">需房主同意进场</string>
    <string name="eat_dice">吃骰模式</string>
    <string name="eat_dice_info">可抢押不出</string>
    <string name="move_chips">挪注模式</string>
    <string name="move_chips_info">可抢挪注</string>
    <string name="dealer_setting">庄设置</string>
    <string name="grab_dealer">抢庄</string>
    <string name="fixed_dealer">固定庄位</string>
    <string name="turn_dealer">轮庄</string>
    <string name="grap_dealer_score">抢庄积分</string>


</resources>
