<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="108dp">

            <ImageView
                android:id="@+id/club_create_bgimage_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/login_bg" />

            <com.qmuiteam.qmui.widget.QMUIRadiusImageView
                android:id="@+id/club_create_icon"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:clickable="false"
                android:src="@drawable/club_upload_head_ic"
                app:qmui_border_color="?attr/qmui_config_color_gray_6"
                app:qmui_border_width="1px"
                app:qmui_is_circle="true" />
        </FrameLayout>

        <com.hcll.fishshrimpcrab.club.widget.ClubEditListItem
            android:id="@+id/club_create_name_celi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cel_hint="@string/club_create_input_name"
            app:cel_name="@string/club_creat_name"
            app:cel_shownext="true" />

        <com.hcll.fishshrimpcrab.club.widget.ClubEditListItem
            android:id="@+id/club_create_region_celi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cel_hint="@string/club_create_input_region"
            app:cel_name="@string/club_create_region"
            app:cel_shownext="true" />

        <com.hcll.fishshrimpcrab.club.widget.ClubEditListItem
            android:id="@+id/club_create_intro_celi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cel_hint="@string/club_create_input_intro"
            app:cel_name="@string/club_create_intro"
            app:cel_shownext="true" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/club_create_fee"
                    android:textColor="@color/qmui_config_color_white" />

                <TextView
                    android:id="@+id/club_create_fee_tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/comm_diamonds_ic"
                    android:drawablePadding="4dp"
                    android:textColor="@color/common_text_color"
                    tools:text="300" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/club_create_balance"
                    android:textColor="@color/qmui_config_color_white" />

                <TextView
                    android:id="@+id/club_create_fee_tv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/comm_diamonds_ic"
                    android:drawablePadding="4dp"
                    android:textColor="@color/common_text_color"
                    tools:text="300" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/club_create_sure_tv"
        style="@style/common_commit_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="12dp"
        android:text="@string/club_sure_create" />


</RelativeLayout>