<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/qmui_config_color_black"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/club_game_list"
            android:textColor="@color/qmui_config_color_white" />

        <TextView
            android:id="@+id/club_game_filter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:drawableEnd="@drawable/filter_game_ic"
            android:padding="8dp"
            android:text="@string/game_filter"
            android:textColor="@color/common_text_color" />
    </RelativeLayout>

    <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
        android:id="@+id/club_game_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <ListView
            android:id="@+id/club_game_list_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/transparent"
            android:dividerHeight="1dp"
            android:scrollbars="none" />
    </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/club_game_create_ll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/club_game_empty_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/club_not_game"
            android:gravity="center"
            android:text="@string/not_game"
            android:textColor="@color/qmui_config_color_75_white"
            android:textSize="12sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/club_game_create_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:src="@drawable/create_game_ic" />
    </LinearLayout>


</LinearLayout>