<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_perfect_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.hcll.fishshrimpcrab.login.activity.PerfectInfoActivity">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/perfect_topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/qmui_topbar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableTop="@drawable/login_logo"
                android:padding="34dp"
                android:text="@string/login_welcom"
                android:textColor="@color/common_text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@color/login_edit_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/perfect_camera_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:drawableTop="@drawable/perfect_info_camera"
                    android:padding="16dp"
                    android:text="@string/upload_image"
                    android:textColor="@color/qmui_config_color_50_white"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/perfect_camera_iv"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="centerInside"
                    android:visibility="gone" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/login_edit_bg"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/perfect_info_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/login_fill_bg"
                        android:drawableLeft="@drawable/perfect_info_name"
                        android:drawablePadding="8dp"
                        android:hint="@string/user_name"
                        android:padding="8dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/login_edit_bg"
                    android:orientation="horizontal"
                    android:paddingBottom="2dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp">

                    <EditText
                        android:id="@+id/perfect_info_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/login_fill_bg"
                        android:drawableLeft="@drawable/user_sex_ic"
                        android:drawablePadding="8dp"
                        android:drawableRight="@drawable/perfect_edit_next"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/user_sex"
                        android:padding="8dp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/perfect_info_commit_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_commit_btn_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/finish"
            android:textColor="@color/qmui_config_color_60_pure_black"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
